--- a/Vf/Vf/Vf.vcxproj
+++ b/Vf/Vf/Vf.vcxproj
@@ -102,13 +102,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\lib-vc2019;$(SolutionDir)\..\bgfx\.build\win64_vs2017\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\lib-vc2019;$(SolutionDir)\..\bgfx\.build\win64_vs2017\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -138,19 +138,22 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\lib-vc2019;$(SolutionDir)\..\bgfx\.build\win64_vs2017\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\lib-vc2019;$(SolutionDir)\..\bgfx\.build\win64_vs2017\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="audio.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
