Add glew as a submodule

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -5,4 +5,6 @@ ADD_LIBRARY(deps INTERFACE)
 ADD_SUBDIRECTORY(bgfx)
 
 ADD_SUBDIRECTORY(glfw)
+
+ADD_SUBDIRECTORY(glew)
 TARGET_LINK_LIBRARIES(deps INTERFACE bgfx glfw)
