Updates to Audio Class and Game Class
Pull build, ready to merge with master.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ GLEW/
 setup/
 Vf/.vs
 Vf/x64
+Vf/.vs/Vf/v16/ipch/AutoPCH/1ffc0a4edc048d05/GAME.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/1ffc0a4edc048d05/GAME.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/1ffc0a4edc048d05/GAME.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/6463a8a9cf770ed8/MAIN.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/1ffc0a4edc048d05/GAME.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/6463a8a9cf770ed8/MAIN.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/e8dc0a4759f43c88/MAIN.ipch
+Vf/.vs/Vf/v16/ipch/AutoPCH/f7f89ff57185544d/AUDIO.ipch
