--- a/Vf/Vf/Vf.vcxproj
+++ b/Vf/Vf/Vf.vcxproj
@@ -93,8 +93,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\src\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -109,8 +110,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\src\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,8 +131,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\src\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -149,8 +152,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64;$(SolutionDir)\..\GLFW\src\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
