Fix build for regular VS solution

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -12,6 +12,14 @@ ADD_LIBRARY(deps INTERFACE)
 #SET_TARGET_PROPERTIES(glew PROPERTIES LINKER_LANGUAGE CXX)
 #TARGET_LINK_LIBRARIES(glew INTERFACE glew)
 
+# GLFW
+# If we are running Windows with Visual Studio compile to Multi-Threaded instead of DLL.
+#if (MSVC)
+#	SET(CMAKE_C_FLAGS_DEBUG "/MTd")
+#	SET(CMAKE_C_FLAGS_RELEASE "/MT")
+#	SET(CMAKE_C_FLAGS_MINSIZEREL "/MT")
+#	SET(CMAKE_C_FLAGS_RELWITHDEBINFO "/MT")
+#endif()
 ADD_SUBDIRECTORY(glfw)
 
 ADD_SUBDIRECTORY(bgfx)
