--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ PROJECT(Voidfall)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 
 IF(CMAKE_COMPILER_IS_GNUCXX OR APPLE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    SET(CMAKE_CXX_STANDARD 17)
 ENDIF()
 
 SET(VOIDFALL_ENV_ROOT ${CMAKE_CURRENT_DIR})
