Fix merge remnants for Voidfall.vcxproj

--- a/Voidfall/Voidfall.vcxproj
+++ b/Voidfall/Voidfall.vcxproj
@@ -88,25 +88,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-=======
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bx\include\compat\msvc;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,25 +105,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-=======
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bx\include\compat\msvc;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -144,27 +124,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-=======
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bx\include\compat\msvc;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -175,27 +145,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-=======
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\OpenAL\include;$(SolutionDir)\..\bx\include;$(SolutionDir)\..\bx\include\compat\msvc;$(SolutionDir)\..\bgfx\include;$(SolutionDir)\..\bimg\include;$(SolutionDir)\..\GLFW\include;$(SolutionDir)\..\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-<<<<<<< HEAD:Voidfall/Voidfall.vcxproj
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\..\OpenAL;$(SolutionDir)\..\GLEW\lib\release\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies);bgfxDebug.lib;bgfxRelease.lib;bxDebug.lib;bxRelease.lib;bimgDebug.lib;bimgRelease.lib;OpenAL32.lib;bimg_decodeDebug.lib;bimg_decodeRelease.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
->>>>>>> master:Vf/Vf/Vf.vcxproj
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
