--- a/Voidfall/Voidfall.vcxproj
+++ b/Voidfall/Voidfall.vcxproj
@@ -94,7 +94,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
@@ -111,7 +111,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
@@ -132,7 +132,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
@@ -153,7 +153,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
