Fix CMake builds
Fixes both Debug and Release builds (hopefully)

--- a/deps/bgfx/CMakeLists.txt
+++ b/deps/bgfx/CMakeLists.txt
@@ -21,16 +21,22 @@ if( APPLE AND NOT XCODE )
 	set( CMAKE_CXX_FLAGS "-ObjC++" )
 endif()
 
+#if (MSVC)
+	#set (CMAKE_CXX_FLAGS "/MTd")
+	#set (CMAKE_CXX_FLAGS_DEBUG "/MTd")
+	#set (CMAKE_CXX_FLAGS_RELEASE "/MT")
+#endif()
+
 option( BGFX_BUILD_TOOLS      "Build bgfx tools."                             ON  )
 option( BGFX_BUILD_EXAMPLES   "Build bgfx examples."                          OFF )
 option( BGFX_INSTALL          "Create installation target."                   ON  )
 option( BGFX_INSTALL_EXAMPLES "Install examples and their runtimes."          OFF )
 option( BGFX_CUSTOM_TARGETS   "Include convenience custom targets."           ON  )
 option( BGFX_USE_OVR          "Build with OVR support."                       OFF )
-option( BGFX_AMALGAMATED      "Amalgamated bgfx build for faster compilation" OFF )
-option( BX_AMALGAMATED        "Amalgamated bx build for faster compilation"   OFF )
-option( BGFX_CONFIG_DEBUG     "Enables debug configuration on all builds"     OFF )
-option( BGFX_USE_DEBUG_SUFFIX "Add 'd' suffix to debug output targets"        ON  )
+option( BGFX_AMALGAMATED      "Amalgamated bgfx build for faster compilation" ON  )
+option( BX_AMALGAMATED        "Amalgamated bx build for faster compilation"   ON  )
+option( BGFX_CONFIG_DEBUG     "Enables debug configuration on all builds"     ON  )
+option( BGFX_USE_DEBUG_SUFFIX "Add 'd' suffix to debug output targets"        OFF )
 set( BGFX_OPENGL_VERSION  "" CACHE STRING "Specify minimum opengl version" )
 
 if( NOT BX_DIR )
