--- a/Voidfall/Voidfall.vcxproj
+++ b/Voidfall/Voidfall.vcxproj
@@ -88,14 +88,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\include;$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bgfx\bimg\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfxd.lib;bxd.lib;bimgd.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
@@ -105,14 +105,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\include;$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bgfx\bimg\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfxd.lib;bxd.lib;bimgd.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\include;$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bgfx\bimg\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -132,7 +132,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
@@ -145,7 +145,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bimg\bgfx\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\include;$(SolutionDir)\deps\openal-soft\include;$(SolutionDir)\deps\bgfx\bx\include;$(SolutionDir)\deps\bgfx\bx\include\compat\msvc;$(SolutionDir)\deps\bgfx\bgfx\include;$(SolutionDir)\deps\bgfx\bimg\include;$(SolutionDir)\deps\GLFW\include;$(SolutionDir)\deps\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -153,7 +153,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\glfw\src\Debug;$(SolutionDir)\build\deps\bgfx\Release;SolutionDir)\build\deps\bgfx\Debug;$(SolutionDir)\build\deps\openal-soft\Release;$(SolutionDir)\build\deps\openal-soft\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\build\deps\glfw\src\Release;$(SolutionDir)\build\deps\bgfx\Release;$(SolutionDir)\build\deps\openal-soft\Release</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glfw3.lib;bgfx.lib;bx.lib;bimg.lib;astc-codec.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerbose</ShowProgress>
     </Link>
