--- a/Voidfall/CMakeLists.txt
+++ b/Voidfall/CMakeLists.txt
@@ -1,11 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 
-FILE(GLOB headers *.h)
-FILE(GLOB cpps *.cpp)
-
-SET(source_files ${headers} ${cpps})
-SOURCE_GROUP(Voidfall FILES ${source_files})
-
-ADD_EXECUTABLE(Voidfall ${source_files})
+ADD_EXECUTABLE(Voidfall
+    main.cpp
+    Audio.cpp
+    WindowManager.cpp
+    ECS/Systems/RenderSystem.cpp
+    tools/shaderHandler.h)
 TARGET_LINK_LIBRARIES(Voidfall deps)
 
