--- a/Voidfall/Voidfall.vcxproj
+++ b/Voidfall/Voidfall.vcxproj
@@ -167,7 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Audio.h" />
-    <ClInclude Include="CicularFIFO.h" />
+    <ClInclude Include="CircularFIFO.h" />
     <ClInclude Include="ECS\Components\Colour.h" />
     <ClInclude Include="ECS\Components\Renderable.h" />
     <ClInclude Include="ECS\Core\ComponentArray.h" />
